# django_intro

./: README.md  db.sqlite3  manage.py  pyproject.toml
django_intro_project/: asgi.py  settings.py  urls.py  wsgi.py
snickers/: tests.py  urls.py  views.py
templates/: about.html  base.html  home.html
