[tool.poetry]
name = "django_intro"
version = "0.1.0"
description = "Lab6 starter django app"
authors = ["ynhuang <ynhuang.amazon.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
